Release Notes

* 9/24/2018
  * using resolve_archives=True in list_replicas

* 9/20/2018
  * added maxJumboPerSite

* 9/7/2018
  * added enableJumbo

* 7/23/2018
  * changed getScout to ignore nEvents<10*nCore
  * added HS06sPerEventFixed

* 7/19/2018
  * changed AtlasAJB to check cmtConfig for nightlies

* 7/17/2018
  * added orderByLB

* 7/16/2018
  * fixed maxWalltime and maxCpuCount for multiple consumers

* 5/23/2018
  * changed AtlasAJB for hospital

* 5/7/2018
  * excluding validation from *_AES for es conversion

* 4/25/2018
  * make IO intensity cutoff configurable

* 4/19/2018
  * using notDiscardEvents for ES tasks by default

* 4/16/2018
  * added minCpuEfficiency

* 3/20/2018
  * notDiscardEvents

* 3/14/2018
  * to reset NG

* 3/1/2018
  * added a protection against state change in DB

* 2/28/2018
  * changed exhausted messages to INFO
  * fixed finished tasks with mutable datasets

* 2/14/2018
  * fixed retryTask to go through when input is mutable

* 2/8/2018
  * changed not to retry failed child tasks

* 1/26/2018
  * added useJumbo=pending

* 1/19/2018
  * setting superStatus and T_TASK.status consistently

* 1/17/2018
  * added nStandby

* 12/15/2017
  * changed to exclude workDirSize from NG

* 12/14/2017
  * changing gshare of prod tasks when 95% done

* 12/7/2017
  * checking maxattempt when retryTask_JEDI

* 11/29/2017
  * setting allowAccessLAN to analysis tasks
  * changed InputChunk not to ignore input size for directIO sites if NG is used

* 11/27/2017
  * using resurrectConsumers for ES tasks by default
  * changed InputChunk to ignore input size for directIO sites

* 11/17/2017
  * using NG as tot size of input when pooing input files in child tasks

* 11/15/2017
  * added noInputPooling

* 11/14/2017
  * fixed double counting of input files in AtlasPJB

* 11/13/2017
  * setting prodDBlockToken=local to lib.tgz
  * using 60d of lifetime for merged parent datasets

* 11/10/2017
  * Changed call to getHS06sec to new mode

* 11/6/2017